# ChangeLog for dev-util/bustle
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bustle/ChangeLog,v 1.22 2014/01/19 10:44:18 ago Exp $

  19 Jan 2014; Agostino Sarubbo <ago@gentoo.org> bustle-0.4.2-r1.ebuild:
  Stable for ppc64, wrt bug #488808

  19 Jan 2014; Agostino Sarubbo <ago@gentoo.org> bustle-0.4.2-r1.ebuild:
  Stable for ppc, wrt bug #488808

  12 Dec 2013; Mark Wright <gienah@gentoo.org> bustle-0.2.3.ebuild,
  bustle-0.4.0.ebuild, bustle-0.4.2-r1.ebuild, bustle-0.4.2.ebuild:
  Move cairo, glib, gio, gtk2hs-buildtools, pango to slot 0

  07 Dec 2013; Pacho Ramos <pacho@gentoo.org> bustle-0.4.2-r1.ebuild:
  x86 stable, bug #488808

  24 Nov 2013; Pacho Ramos <pacho@gentoo.org> bustle-0.4.2-r1.ebuild:
  amd64 stable, bug #488808

*bustle-0.4.2-r1 (03 Apr 2013)

  03 Apr 2013; Mark Wright <gienah@gentoo.org> +bustle-0.4.2-r1.ebuild,
  +files/bustle-0.2.3-restrict-gtk2hs-deps-to-gtkplus2.patch,
  +files/bustle-0.4.0-restrict-gtk2hs-deps-to-gtkplus2.patch,
  +files/bustle-0.4.2-restrict-gtk2hs-deps-to-gtkplus2.patch,
  bustle-0.2.3.ebuild, bustle-0.4.0.ebuild, bustle-0.4.2.ebuild:
  Restrict the deps in bustle to select gtk+2 in slot 2 fix bug 464260.

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> bustle-0.4.2.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> bustle-0.4.2.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> bustle-0.4.2.ebuild:
  Add ~ia64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> bustle-0.4.2.ebuild:
  Add ~ppc64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> bustle-0.4.2.ebuild:
  Add ~ppc, wrt bug #449220

  07 Dec 2012; Sergei Trofimovich <slyfox@gentoo.org> bustle-0.4.2.ebuild:
  Get rid of 'dev-haskell/time' depend as it's a ghc's core library.

*bustle-0.4.2 (14 Nov 2012)

  14 Nov 2012; Sergei Trofimovich <slyfox@gentoo.org> +bustle-0.4.2.ebuild: