@@ -11,26 +11,18 @@ DIST bustle-0.2.3.tar.gz 39314 SHA256 2a2d0633d6a0714c845715f6aa4392b08d1d241187
 DIST bustle-0.4.0-tests.tar.gz 8340 SHA256 7e4c354479edc835457fdecc89ab7fc5e1087ab4637b7b1ac6fadfe860190fbe SHA512 c7685496f3a84c1615752ae9aad22202bfe703147441581abe599a5e5055cdef54f27b4e0d01603b23a83a4b42b0595b5538c5b4d65a522a9e76b8d187ae54b1 WHIRLPOOL 6591ed10c75ef044375bf5e80719aac4a40244f647c4045f45811c9e8736afaafa5b83b92803ef8912c2ecfe9672ac20734fc954ab2bb09cff2842c1e6b4fe5a
 DIST bustle-0.4.0.tar.gz 89873 SHA256 a48acd215f918381b96d6a7fc60528d6f30a982bfc529c329f890485680d2549 SHA512 5a8078976bb85b9f3674a7d8914729710e69c5db7779e012659bab4064d1f170508f7b8e45575d5b40abd48b4054e6e06d89b450320c69d22a841ba54bceb200 WHIRLPOOL a55946ffa82275a9aa556f88b4112be153ab8fa3407565f3849253a5d6ccf863f1262313fe3b356806f5b552c23a14595ce296a69cd1a30af6aafce6054c3321
 DIST bustle-0.4.2.tar.gz 95707 SHA256 bf03fb0a14a2559b6abe4cfeb673b30d86a31a89fb45883d7594644afc434cee SHA512 8a6c1860cb655fc9bd7d42d130d87416c74b988b81749ec8cc1c25cacd3dd4516f59f5cb5954b473c3f6ac32b11853e9bc8881708962144067a0325845dd8562 WHIRLPOOL ebc31713bb202f247a38ed04357598ba9951f72a3fa18b679d83a3ce088dd8a144d7ee5a772ce02715dd735907ba2219541e971d5b1f3a16eb21d22ab1600753
+DIST bustle-0.4.3.tar.gz 96970 SHA256 255e035a8b494f7edd21e657c246be00da1452faa2341abccebd53e8f333e9d1 SHA512 263c929a38ffa8c0df03deb9736879d1fbc630f1dcd47183cc304495cb6d5d2fbdb01e4b83e25712ad13d57662d41d0eee35495b76ca52484b9b2352dfde1bdb WHIRLPOOL fe434e7468132e3ecca848bdc09db3bd6d3191ca7fb720fabab48e6181983e6a6facc437421ba4eaea3e17815ac0527e3c0bd648ff449f5fb02212c920c40ff4
 EBUILD bustle-0.2.3.ebuild 1456 SHA256 cb9d90768b6f240b84726b385afd14bf6ae6b6e21e8476396b89cd94cdb3e789 SHA512 3af6bea2a573bf57ce0be8bc7ede67972f69ab2c50784e8a05c90fa0f3b261fece076f76bfe91b12f4ab5675ce1f53473b04c57c92808cce390fce78032733c4 WHIRLPOOL ed99b28771df4b4c090044e7af38e809c1ddbd9f4522a67f3b69e634cfc11cdf34f2a04e3a5a333d749a572430a3649a84246d3dd30c306f8a068260ea960f4d
 EBUILD bustle-0.4.0.ebuild 1822 SHA256 3580557331d2a5873774f3e3a9b44ada691e4376e91919ea0cc1e121fd199203 SHA512 f5566f0daaa082d80ef5c06f62ae26ad451166650cdb954a68e286c2a4e7c243d83739d96cd43ace04c86311cbc07ad495577da0d1c70ebd98a92a80ca8c628f WHIRLPOOL 19362def3ae3b46b7256dbb4b3ce02e35ac326b5d52133330b3bd06b3a2fef4f02de2291d3b22ad5deac9e5cfa7b1d4683008f1f913036f9bfbf3ac62d226f41
 EBUILD bustle-0.4.2-r1.ebuild 1673 SHA256 22d85602fa531548c228e858020cedde9d73569135f50267129920b3a2871526 SHA512 36b5beaa6605d3b919448a71083882d8338d2860aaa5cf7c748da1d17f5c935c24bd69a4cd75a8ab835e955081cd0a2d72fff8481ac706124f7dd6069a347f1e WHIRLPOOL fb97adb155f54ec11ca6249988f6d6566ee0e6d7dc8d41e117dbf67c931098a2ad70405330392c6ae254c4be186db5a191e488845ff2316aed28cfde1c61efb5
 EBUILD bustle-0.4.2.ebuild 1677 SHA256 534b96ff8b5c2f657fdc77e4c8e920553b488af96762fa0bf387cbd50d602e29 SHA512 224ae6430fb326d22f00607c53ea60dc5c826fe349bc7f1502c11e42b9f427ac9defdd84d1ae757014ec4453de29bdf11b0f2e62d190f75480c9ad3b39781733 WHIRLPOOL 8a452daaf8bf5838f43de5b940a125bf82fa4c74f5aabc61b2488bed643293be71b688140d5fade97dcda09eb7f01f724aad54526e70caffd843b36b610bfaaf
-MISC ChangeLog 3625 SHA256 cc79d54f3a3c4969fec2e086e7a8ad01dfe5b534008ba0f4f1a8a8aa645a6a32 SHA512 79f7d5cbbfd1ddc8d85bae88f94c8c8124f3752dfbe0f1451fa223d219e0f8ab697558797b33b13fc6780b0272c1c700a41f22a1352746e3c4ab80f61fb99c94 WHIRLPOOL 89edfa169e14af6b1f27ea30e3b98686981cbf8bcc544393c9e4b22148cca848b4706bbe35f550e6b704bea9d06494cedfbcfbd611a1a6a102e7c4ed2d447946
+EBUILD bustle-0.4.3.ebuild 1570 SHA256 8176a4325aa8372911027335ac1ae15cd0e925b238e7234ddc94d11ba3029a30 SHA512 8340d1c2d9216a1374120d9083a7296dfa25fb9ef1f039d34c34127dc39e7fb117474d002442ccdb886789d5d992c398b54376f6c847c089e508366f6347874d WHIRLPOOL 7cf67fc9a322d8f63021e119e69885a32349a98fb6cd78b529caaa95face36f823efbfb890f82085975c5f6bdb0089fff3b3fd47868875b86aa45158eed5f7f2
+MISC ChangeLog 3750 SHA256 db65ae92426ff5361c76d80d2be038e5f3eb6c33942e8330dfacd477ebd67603 SHA512 27bf64530f8a15c8ad6459d66af55d23fb7234658c9ec0b8f7b7240743bf3f0988e9186a58dcbf13693a63160c0cf9ed14a5f6d9962f8ee672a9b1a9072d5842 WHIRLPOOL 6d560f4f85ac7787aebca7b4442066fb8bb8bb4f2f881556caa39e24f4bca25a28889c2a9347120e9ea52877eb5e5d8882fea3b2264f4ece10bce761d0464735
 MISC metadata.xml 314 SHA256 2a36dc7de9fdc3b983bc20185c7091d00937b33fc4b71b4e86d4c5def6eebadc SHA512 cd6c3a7d1ba97797fab5cf6dd797c1f5317c17cd878873b941a3e0ebf9ccca056b4c440d940fb011bb62b4002911df5bbd7ff7cb74a02cddd0fc6c38bb3b0276 WHIRLPOOL f229b7f8afe393103347463fc7332a49db6212e04e49ab446fb5e90b85fb68e9ef2c91b8b2e62d807eedbeb317f6e8a7f5ee51f9454c2e212b1d0a9a0d2d3a0f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS26yDAAoJELp701BxlEWfiQsP/jkOh6lwt8zTWyjK5Yz6Gz6K
-67zsQimLDEp8k4RT6pIoJ9ATZqccsQSzo8gOxrvnh8D/FeRTca5fRK5Da1PjBI+y
-lw992JxoAL133WRyPwZXUtCelpQYbUne43KpAB0zLMsFqhfQGDrB7N+hm3MY1xYZ
-E/dndfj3qHAa1fzOff4M2JmRpfOf9LpuvsNSAEVpaJ+4AygU7foaDemYOUU07lRh
-D7ZB90P86+X1VjWzVGPqpnDedcEOd+ajq9lhF0yrC8w8Bz+bJGErYbBAHo2+0zZZ
-TRUDTz1dOaQahUshgdGARYk4N77Pi9M2ZzI50LivEA5dVgrP9eGxCHdb7IHT1D6j
-UmeowrkOUgtjmnswio7Yogi3SawzcIBUu6gNfQdNvvj3mGTCb/AERIThJErLyXWK
-udvlE9EpuAQS/GVAya5wyHY273NYfGQDHn2hugKFL12wmKv4MvqNgKsUa4isiPlA
-/nlWKh+9LuMp4tl7TVnR4JFyREayylF9K7lGAqReejk7MBA7HF7svrTNj4R+0j4X
-DbE7+rQleoBgFs7SrnlbIUFUCE7ir3MRErcN66Tnt2UYYMnVyY2b1WqFPqo78Oxs
-okUYq4Bo6Oecpih15/IHishc4fW185NPoWqgjMSEL7liqQFvN8vXUcte27jRbhSy
-X4vo7i7ZSRftTTH1udGC
-=+QVs
+iEYEAREIAAYFAlLuA2AACgkQcaHudmEf86oHhQCfcVyeWIWiwXhRAUtQNtsPRL6A
+e2cAoIKgeBfkUljf/0uUaWemWrwVL19K
+=e2UE
 -----END PGP SIGNATURE-----
