@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/bustle
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bustle/ChangeLog,v 1.22 2014/01/19 10:44:18 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bustle/ChangeLog,v 1.23 2014/02/02 08:42:18 slyfox Exp $
+
+*bustle-0.4.3 (02 Feb 2014)
+
+  02 Feb 2014; Sergei Trofimovich <slyfox@gentoo.org> +bustle-0.4.3.ebuild:
+  Version bump.
 
   19 Jan 2014; Agostino Sarubbo <ago@gentoo.org> bustle-0.4.2-r1.ebuild:
   Stable for ppc64, wrt bug #488808
